tests/purs/failing/DeprecatedFFICommonJSModule.purs
-- @shouldFailWith DeprecatedFFICommonJSModule
module Main where

foreign import yes :: Boolean
foreign import no :: Boolean
